--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="index.html">
                 <div class="logo">
                     <img src="images/logo.png" alt="Server logo" class="logo-img">
-                    <h3 class="server-name">ExampleName</h3>
+                    <h3 class="server-name">ExassadleName</h3>
                 </div>
             </a>
 
