--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/pages/home.css">
 
-    <title>AzureMine | Home</title>
+    <title>SigmaStranka | Home</title>
 </head>
 <body>
     <!--Navbar-->
@@ -21,7 +21,7 @@
             <a href="index.html">
                 <div class="logo">
                     <img src="images/logo.png" alt="Server logo" class="logo-img">
-                    <h3 class="server-name">ExassadleName</h3>
+                    <h3 class="server-name">ExampleName</h3>
                 </div>
             </a>
 
@@ -45,7 +45,7 @@
             <div class="left">
                 <div class="server-name">
                     <p>Survival Minecraft Server</p>
-                    <h1 class="minecraft-server-ip">mc.example.com</h1>
+                    <h1 class="minecraft-server-ip">mc.sigma.com</h1>
                 </div>
                 <p class="server-description">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, consectetur explicabo. Dolor enim inventore minus neque officiis.
@@ -241,7 +241,7 @@
 
     <!--Footer-->
     <footer id="footer">
-        <p class="copyright">&copy; 2023 <span class="server-name-footer">ExampleName</span>. All rights reserved.</p>
+        <p class="copyright">&copy; 2023 <span class="server-name-footer">sigmaserver</span>. All rights reserved.</p>
         <div class="social-links">
             <a href="#" class="link tiktok-link"><i class="fa-brands fa-tiktok"></i></a>
             <a href="#" class="link instagram-link"><i class="fa-brands fa-square-instagram"></i></a>
