--- a/admin-team.html
+++ b/admin-team.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" href="images/logo.png">
   <meta name="description" content="Free, modern and nice web template for Minecraft server.">
-  <meta name="author" content="Astronawta">
+  <meta name="author" content="NothingFeel">
 
   <link rel="stylesheet" href="css/global.css">
   <link rel="stylesheet" href="css/pages/admin-team.css">
