--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="left">
                 <div class="server-name">
                     <p>Survival Minecraft Server</p>
-                    <h1 class="minecraft-server-ip">mc.sigma.com</h1>
+                    <h1 class="minecraft-server-ip">nortboxmc.eu/</h1>
                 </div>
                 <p class="server-description">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, consectetur explicabo. Dolor enim inventore minus neque officiis.
